8065972: Remove support for ParNew+SerialOld and DefNew+CMS
Reviewed-by: mgerdin, stefank